# python-signals

./: README.md  pyproject.toml  setup.cfg
celery_signals/mypy/: __init__.py  utils.py
signals/: __init__.py
signals/mypy/: plugin.py  utils.py
tests/: test_signals.py
tests/mypy/: test_send.yaml
